Standardize naming of FormPage methods.
Everything uses "get" instead of some using "find" and some using "get"